--- a/public/app/templates/Caterer/list.html
+++ b/public/app/templates/Caterer/list.html
@@ -18,7 +18,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="Anbieter in Caterer">
+            <tr ng-repeat="Cat in Caterer">
                 <td>{{}}</td>
                 <td>{{}}</td>
                 <td>{{}}</td>
@@ -32,5 +32,5 @@
     </div>
 </div>
 <ul>
-    <li ng-repeat = "Anbieter in Caterer">{{Anbieter.kitchen}}</li>
+    <li ng-repeat = "Cat in Caterer">{{Cat.kitchen}}</li>
 </ul>
