--- a/public/app/templates/Location/list.html
+++ b/public/app/templates/Location/list.html
@@ -27,4 +27,5 @@
             </tbody>
         </table>
     </div>
+    <a href = "#/Location/new" class = "btn btn-default">Create new Location</a>
 </div>
