--- a/public/app/templates/Caterer/list.html
+++ b/public/app/templates/Caterer/list.html
@@ -34,3 +34,4 @@
 <ul>
     <li ng-repeat = "Cat in Caterer">{{Cat.kitchen}}</li>
 </ul>
+<a href = "#/Caterer/new" class = "btn btn-default">Add new Caterer</a>
