--- a/public/app/templates/Location/list.html
+++ b/public/app/templates/Location/list.html
@@ -10,7 +10,7 @@
             <tr>
                 <th>Name</th>
                 <th>Description</th>
-                <th>Adress</th>
+                <th>Address</th>
                 <th>Capacity</th>
                 <th>Price</th>
 
@@ -27,5 +27,5 @@
             </tbody>
         </table>
     </div>
-    <a href = "#/Location/new" class = "btn btn-default">Create new Location</a>
+    <a href = "#/Location/new" class = "btn btn-default">Add new Location</a>
 </div>
