added "create.html" and "list.html" from Invitation/Caterer

--- a/public/app/templates/Caterer/create.html
+++ b/public/app/templates/Caterer/create.html
@@ -7,7 +7,7 @@
         <div class="control-group">
             <label class="control-label" for="name">Name</label>
             <div class="controls">
-                <input id="name" name="name" type="text" placeholder="Name" class="input-xlarge" ng-model="cat.name">
+                <input id="name" name="name" type="text" placeholder="Name of menu" class="input-xlarge" ng-model="cat.name">
             </div>
         </div>
 
@@ -19,23 +19,37 @@
         </div>
 
         <div class="control-group">
-            <label class="control-label" for="adress">Address</label>
+            <label class="control-label" for="pricePerPerson">Price per Person</label>
             <div class="controls">
-                <input id="adress" name="adress" type="text" placeholder="Maximilianstraße 1" class="input-xlarge" ng-model="cat.address">
+                <input id="pricePerPerson" name="pricePerPerson" type="text" placeholder="30" class="input-xlarge" ng-model="cat.pricePerPerson">
             </div>
         </div>
 
         <div class="control-group">
-            <label class="control-label" for="capacity">Capacity</label>
+            <label class="control-label" for="kitchen">Kitchen</label>
             <div class="controls">
-                <input id="capacity" name="capacity" type="text" placeholder="how many" class="input-xlarge" ng-model="cat.capacity">
+                <input id="kitchen" name="kitchen" type="text" placeholder="italian" class="input-xlarge" ng-model="cat.kitchen">
             </div>
         </div>
 
         <div class="control-group">
-            <label class="control-label" for="price">Price</label>
+            <label class="control-label" for="selection">Selection</label>
             <div class="controls">
-                <input id="price" name="price" type="text" placeholder="$$$" class="input-xlarge" ng-model="cat.price">
+                <input id="selection" name="selection" type="text" placeholder="snacks/menu" class="input-xlarge" ng-model="cat.selection">
+            </div>
+        </div>
+
+        <div class="control-group">
+            <label class="control-label" for="vein">Vein</label>
+            <div class="controls">
+                <input id="vein" name="vein" type="text" placeholder="vegetarian/vegan/normal" class="input-xlarge" ng-model="cat.vein">
+            </div>
+        </div>
+
+        <div class="control-group">
+            <label class="control-label" for="offeror">Offeror</label>
+            <div class="controls">
+                <input id="offeror" name="offeror" type="text" placeholder="Luigi's Pizza" class="input-xlarge" ng-model="cat.offeror">
             </div>
         </div>
 
