--- a/public/app/templates/Invitation/create.html
+++ b/public/app/templates/Invitation/create.html
@@ -7,35 +7,35 @@
         <div class="control-group">
             <label class="control-label" for="name">Name</label>
             <div class="controls">
-                <input id="name" name="name" type="text" placeholder="Name" class="input-xlarge" ng-model="cat.name">
+                <input id="name" name="name" type="text" placeholder="Name" class="input-xlarge" ng-model="Inv.name">
             </div>
         </div>
 
         <div class="control-group">
             <label class="control-label" for="textinput">Description</label>
             <div class="controls">
-                <input id="textinput" name="textinput" type="text" placeholder="what is it" class="input-xlarge" ng-model="cat.description">
+                <input id="textinput" name="textinput" type="text" placeholder="Birthday/Party template" class="input-xlarge" ng-model="Inv.description">
             </div>
         </div>
 
         <div class="control-group">
-            <label class="control-label" for="adress">Address</label>
+            <label class="control-label" for="salutation">Salutation</label>
             <div class="controls">
-                <input id="adress" name="adress" type="text" placeholder="Maximilianstraße 1" class="input-xlarge" ng-model="cat.address">
+                <input id="salutation" name="salutation" type="text" placeholder="Hello my friends" class="input-xlarge" ng-model="Inv.salutation">
             </div>
         </div>
 
         <div class="control-group">
-            <label class="control-label" for="capacity">Capacity</label>
+            <label class="control-label" for="text">Text</label>
             <div class="controls">
-                <input id="capacity" name="capacity" type="text" placeholder="how many" class="input-xlarge" ng-model="cat.capacity">
+                <input id="text" name="text" type="text" placeholder="I celebrate ..." class="input-xlarge" ng-model="Inv.text">
             </div>
         </div>
 
         <div class="control-group">
-            <label class="control-label" for="price">Price</label>
+            <label class="control-label" for="greeting">Greeting</label>
             <div class="controls">
-                <input id="price" name="price" type="text" placeholder="$$$" class="input-xlarge" ng-model="cat.price">
+                <input id="greeting" name="greeting" type="text" placeholder="See you" class="input-xlarge" ng-model="Inv.greeting">
             </div>
         </div>
 
