--- a/public/app/templates/Location/create.html
+++ b/public/app/templates/Location/create.html
@@ -17,9 +17,9 @@
         </div>
 
         <div class="control-group">
-            <label class="control-label" for="adress">Address</label>
+            <label class="control-label" for="address">Address</label>
             <div class="controls">
-                <input id="adress" name="adress" type="text" placeholder="Maximilianstraße 1" class="input-xlarge" ng-model="Loc.address">
+                <input id="address" name="address" type="text" placeholder="Maximilianstraße 1" class="input-xlarge" ng-model="Loc.address">
             </div>
         </div>
 
