--- a/public/app/templates/Caterer/create.html
+++ b/public/app/templates/Caterer/create.html
@@ -46,12 +46,12 @@
             </div>
         </div>
 
-        <div class="control-group">
+       <!-- <div class="control-group">
             <label class="control-label" for="offeror">Offeror</label>
             <div class="controls">
                 <input id="offeror" name="offeror" type="text" placeholder="Luigi's Pizza" class="input-xlarge" ng-model="cat.offeror">
             </div>
-        </div>
+        </div>-->
 
         <!-- Button -->
         <div class="control-group">
