added buttons delete / edit for Location and Invitaion addad image upload for Location and Invitation updated Controller

--- a/public/app/templates/Invitation/edit.html
+++ b/public/app/templates/Invitation/edit.html
@@ -1,6 +1,6 @@
-<form class="form-horizontal" ng-submit="createInv()">
+<form class="form-horizontal" ng-submit="saveInv()">
     <fieldset>
-        <legend>Create Invitation offer</legend>
+        <legend>Update Invitation offer</legend>
 
         <div ng-include="'app/templates/Invitation/form.html'"></div>
 
