--- a/public/app/templates/Invitation/list.html
+++ b/public/app/templates/Invitation/list.html
@@ -9,6 +9,7 @@
             <thead>
             <tr>
                 <th>Name</th>
+                <th>Layover</th>
                 <th>Description</th>
                 <th>Price per Person</th>
                 <th>Salutation</th>
@@ -19,11 +20,14 @@
             <tbody>
             <tr ng-repeat="Inv in Invitation">
                 <td>{{Inv.name}}</td>
+                <td>{{Inv.layover}}</td>
                 <td>{{Inv.description}}</td>
                 <td>{{Inv.pricePerPerson}}</td>
                 <td>{{Inv.salutation}}</td>
                 <td>{{Inv.text}}</td>
                 <td>{{Inv.greeting}}</td>
+                <td><a href="#/Invitation/{{Inv._id}}/edit" class="btn btn-default">Edit</a></td>
+                <td><a href="" ng-click="deleteInv(Inv)" class="btn btn-danger">Delete</a></td>
             </tr>
             </tbody>
         </table>
@@ -32,4 +36,4 @@
 <ul>
     <li ng-repeat = "Inv in Invitation">{{Inv.name}}</li>
 </ul>
-<a href = "#/Location/new" class = "btn btn-default">Add new Location</a>
+<a href = "#/Invitation/new" class = "btn btn-default">Add new Invitation</a>
