--- a/public/app/templates/Location/create.html
+++ b/public/app/templates/Location/create.html
@@ -2,46 +2,7 @@
     <fieldset>
         <legend>Create Location offer</legend>
 
-        <div class="control-group">
-            <label class="control-label" for="name">Name</label>
-            <div class="controls">
-                <input id="name" name="name" type="text" placeholder="Name" class="input-xlarge" ng-model="Loc.name">
-            </div>
-        </div>
+        <div ng-include="'app/templates/Location/form.html'"></div>
 
-        <div class="control-group">
-            <label class="control-label" for="textinput">Description</label>
-            <div class="controls">
-                <input id="textinput" name="textinput" type="text" placeholder="what is it" class="input-xlarge" ng-model="Loc.description">
-            </div>
-        </div>
-
-        <div class="control-group">
-            <label class="control-label" for="address">Address</label>
-            <div class="controls">
-                <input id="address" name="address" type="text" placeholder="Maximilianstraße 1" class="input-xlarge" ng-model="Loc.address">
-            </div>
-        </div>
-
-        <div class="control-group">
-            <label class="control-label" for="capacity">Capacity</label>
-            <div class="controls">
-                <input id="capacity" name="capacity" type="text" placeholder="how many" class="input-xlarge" ng-model="Loc.capacity">
-            </div>
-        </div>
-
-        <div class="control-group">
-            <label class="control-label" for="price">Price</label>
-            <div class="controls">
-                <input id="price" name="price" type="text" placeholder="$$$" class="input-xlarge" ng-model="Loc.price">
-            </div>
-        </div>
-
-        <!-- Button -->
-        <div class="control-group">
-            <div class="controls">
-                <input type="submit" class="btn btn-primary" value="Save"/>
-            </div>
-        </div>
     </fieldset>
 </form>
