updated some content in all list.html

--- a/public/app/templates/Location/list.html
+++ b/public/app/templates/Location/list.html
@@ -9,7 +9,7 @@
             <thead>
             <tr>
                 <th>Name</th>
-                <th>Pic</th>
+                <th>Picture</th>
                 <th>Description</th>
                 <th>Address</th>
                 <th>Capacity</th>
@@ -25,8 +25,8 @@
                 <td>{{Loc.address}}</td>
                 <td>{{Loc.capacity}}</td>
                 <td>{{Loc.price}}</td>
-                <td><a href="#/Location/{{Loc._id}}/edit" class="btn btn-default">Edit</a></td>
-                <td><a href="" ng-click="deleteLoc(Loc)" class="btn btn-danger">Delete</a></td>
+                <td><a href="#/Location/{{Loc._id}}/edit" class="btn btn-default btn-sm">Edit</a></td>
+                <td><a href="" ng-click="deleteLoc(Loc)" class="btn btn-danger btn-sm">Delete</a></td>
             </tr>
             </tbody>
         </table>
