--- a/public/app/templates/Caterer/list.html
+++ b/public/app/templates/Caterer/list.html
@@ -9,7 +9,7 @@
             <thead>
             <tr>
                 <th>Name</th>
-                <th>Pic</th>
+                <th>Picture</th>
                 <th>Description</th>
                 <th>Price per Person</th>
                 <th>Kitchen</th>
@@ -29,8 +29,8 @@
                 <td>{{cat.selection}}</td>
                 <td>{{cat.vein}}</td>
                 <!--<td>{{cat.offeror}}</td>-->
-                <td><a href="#/Caterer/{{cat._id}}/edit" class="btn btn-default">Edit</a></td>
-                <td><a href="" ng-click="deleteCat(cat)" class="btn btn-danger">Delete</a></td>
+                <td><a href="#/Caterer/{{cat._id}}/edit" class="btn btn-default btn-sm">Edit</a></td>
+                <td><a href="" ng-click="deleteCat(cat)" class="btn btn-danger btn-sm">Delete</a></td>
             </tr>
             </tbody>
         </table>
