--- a/public/app/templates/Invitation/list.html
+++ b/public/app/templates/Invitation/list.html
@@ -26,8 +26,8 @@
                 <td>{{Inv.salutation}}</td>
                 <td>{{Inv.text}}</td>
                 <td>{{Inv.greeting}}</td>
-                <td><a href="#/Invitation/{{Inv._id}}/edit" class="btn btn-default">Edit</a></td>
-                <td><a href="" ng-click="deleteInv(Inv)" class="btn btn-danger">Delete</a></td>
+                <td><a href="#/Invitation/{{Inv._id}}/edit" class="btn btn-default btn-sm">Edit</a></td>
+                <td><a href="" ng-click="deleteInv(Inv)" class="btn btn-danger btn-sm">Delete</a></td>
             </tr>
             </tbody>
         </table>
