--- a/public/app/templates/Invitation/list.html
+++ b/public/app/templates/Invitation/list.html
@@ -20,7 +20,7 @@
             <tbody>
             <tr ng-repeat="Inv in Invitation">
                 <td>{{Inv.name}}</td>
-                <td>{{Inv.layover}}</td>
+                <td>{{Inv.pattern}}</td>
                 <td>{{Inv.description}}</td>
                 <td>{{Inv.pricePerPerson}}</td>
                 <td>{{Inv.salutation}}</td>
