correct Link fo Offers created

--- a/public/app/templates/Home/home.html
+++ b/public/app/templates/Home/home.html
@@ -32,7 +32,7 @@
 				<hr>
 				<h5>The all-in-one solution for event-planning</h5>
 				<hr>
-				<a href="#/Invitation/new" class="btn btn-default">Insert Offer</a>
+				<a href="#/Offer" class="btn btn-default">Insert Offer</a>
 				<a href="" class="btn btn-default">Create Event</a>
 			</div>
 		</div>
