--- a/public/app/templates/Home/home.html
+++ b/public/app/templates/Home/home.html
@@ -6,6 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<style>
+		body  {
+			background-image: url(https://pixabay.com/static/uploads/photo/2015/10/12/15/09/concert-984237_960_720.jpg);
+		}
+	</style>
 
 <!--
 	<link rel="stylesheet" href="../../../css/startpage/bootstrap.min.css">
@@ -22,18 +27,46 @@
 
 
 
+
 <!-- home section -->
-<section id="home">
+<section background="https://pixabay.com/static/uploads/photo/2015/10/12/15/09/concert-984237_960_720.jpg" id="home">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h3>The Momentum of Events</h3>
-				<h1>EvenTUM</h1>
-				<hr>
-				<h5>The all-in-one solution for event-planning</h5>
-				<hr>
-				<a href="#/Offer" class="btn btn-default">Insert Offer</a>
-				<a href="" class="btn btn-default">Create Event</a>
+<!--
+				<div>
+					<img class="mySlides" src="https://pixabay.com/static/uploads/photo/2015/10/12/15/09/concert-984237_960_720.jpg" style="width:100%">
+					<img class="mySlides" src="https://pixabay.com/static/uploads/photo/2013/04/03/16/36/crystal-bridge-99972_960_720.jpg" style="width:100%">
+				</div>
+
+				<script>
+					var myIndex = 0;
+					carousel();
+
+					function carousel() {
+						var i;
+						var x = document.getElementsByClassName("mySlides");
+						for (i = 0; i < x.length; i++) {
+							x[i].style.display = "none";
+						}
+						myIndex++;
+						if (myIndex > x.length) {myIndex = 1}
+						x[myIndex-1].style.display = "block";
+						setTimeout(carousel, 2000); // Change image every 2 seconds
+					}
+				</script>
+-->
+				<font color="white">
+					<center>
+						<h3>The Momentum of Events</h3>
+						<h1>EvenTUM</h1>
+						<hr>
+						<h5>The all-in-one solution for event-planning</h5>
+						<hr>
+						<a href="#/Offer" class="btn btn-default">Insert Offer</a>
+						<a href="" class="btn btn-default">Create Event</a>
+					</center>
+				</font>
 			</div>
 		</div>
 	</div>		
