--- a/public/app/templates/Offer/offer.html
+++ b/public/app/templates/Offer/offer.html
@@ -1,5 +1,13 @@
-<nav>
-    <a href="">1</a>
-    <a href="">2</a>
-    <a href="">3</a>
+<nav style="float: left; margin: 0 auto;">
+    <ul>
+        <li>
+            <a href="#/Location">Location</a>
+        </li>
+        <li>
+            <a href="#/Invitation">Invitation</a>
+        </li>
+        <li>
+            <a href="#/Caterer">Caterer</a>
+        </li>
+    </ul>
 </nav>
