--- a/public/app/templates/Invitation/list.html
+++ b/public/app/templates/Invitation/list.html
@@ -18,22 +18,22 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="Inv in Invitation">
-                <td>{{Inv.name}}</td>
-                <td>{{Inv.pattern}}</td>
-                <td>{{Inv.description}}</td>
-                <td>{{Inv.pricePerPerson}}</td>
-                <td>{{Inv.salutation}}</td>
-                <td>{{Inv.text}}</td>
-                <td>{{Inv.greeting}}</td>
-                <td><a href="#/Invitation/{{Inv._id}}/edit" class="btn btn-default btn-sm">Edit</a></td>
-                <td><a href="" ng-click="deleteInv(Inv)" class="btn btn-danger btn-sm">Delete</a></td>
+            <tr ng-repeat="inv in Invitations">
+                <td>{{inv.name}}</td>
+                <td>{{inv.pattern}}</td>
+                <td>{{inv.description}}</td>
+                <td>{{inv.pricePerPerson}}</td>
+                <td>{{inv.salutation}}</td>
+                <td>{{inv.text}}</td>
+                <td>{{inv.greeting}}</td>
+                <td><a href="#/Invitation/{{inv._id}}/edit" class="btn btn-default btn-sm">Edit</a></td>
+                <td><a href="" ng-click="deleteInv(inv)" class="btn btn-danger btn-sm">Delete</a></td>
             </tr>
             </tbody>
         </table>
     </div>
 </div>
 <ul>
-    <li ng-repeat = "Inv in Invitation">{{Inv.name}}</li>
+   <!-- <li ng-repeat = "inv in Invitations">{{inv.name}}</li> -->
 </ul>
 <a href = "#/Invitation/new" class = "btn btn-default">Add new Invitation</a>
