fixed spelling mistake

--- a/public/app/templates/Invitation/form.html
+++ b/public/app/templates/Invitation/form.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="control-group">
-    <label class="control-label" for="textinput">Price per Persone</label>
+    <label class="control-label" for="textinput">Price per Person</label>
     <div class="controls">
         <input id="textinput" name="textinput" type="text" placeholder="5 € template" class="input-xlarge" ng-model="inv.pricePerPerson">
     </div>
