--- a/public/app/templates/Home/home.html
+++ b/public/app/templates/Home/home.html
@@ -8,7 +8,7 @@
 				<h5>The all-in-one solution for event-planning</h5>
 				<hr>
 				<a href="#/Offer" class="btn btn-default">Insert Offer</a>
-				<a href="" class="btn btn-default">Create Event</a>
+				<a href="#/Event" class="btn btn-default">Create Event</a>
 			</div>
 		</div>
 	</div>
