--- a/public/lib/bootstrap/less/bootstrap.less
+++ b/public/lib/bootstrap/less/bootstrap.less
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
-// Core variables and mixins
+// core variables and mixins
 @import "variables.less";
 @import "mixins.less";
 
@@ -13,7 +13,7 @@
 @import "print.less";
 @import "glyphicons.less";
 
-// Core CSS
+// core CSS
 @import "scaffolding.less";
 @import "type.less";
 @import "code.less";
