--- a/public/app/templates/User/register.html
+++ b/public/app/templates/User/register.html
@@ -6,7 +6,7 @@
                 <h4 class="modal-title">Register</h4>
             </header>
             <div class="modal-body">
-                <div alert-dialog msg="alertDialog.msg" priority="alertDialog.priority" visible="alertDialog.visible"></div>
+                <div alert-dialog msg="alertDialog.msg" priority="alertDialog.priority" visible="alertDialog.visible" name="register" selector="alertDialog.selector"></div>
                 <form class="no-overflow" ng-submit="register.execute()">
                     <div class="form-group">
                         <label for="username">Username</label>
