--- a/public/app/templates/User/login.html
+++ b/public/app/templates/User/login.html
@@ -2,11 +2,11 @@
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <header class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="resetModal()"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">Login</h4>
             </header>
             <div class="modal-body">
-                <div alert-dialog msg="alertDialog.msg" priority="alertDialog.priority" visible="alertDialog.visible"></div>
+                <div alert-dialog msg="alertDialog.msg" priority="alertDialog.priority" visible="alertDialog.visible" name="login" selector="alertDialog.selector"></div>
                 <form class="no-overflow" ng-submit="login.execute()">
                     <div class="form-group">
                         <label for="username">Username</label>
