--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,18 @@ body {
     overflow: hidden;
 }
 
+.row-flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.row-flex .event-card {
+    margin: 1% 1% 1% 0;
+    min-height: 150px;
+    min-width: 220px;
+    width: 24%;
+}
+
 #home {
     background-image: url(https://pixabay.com/static/uploads/photo/2015/10/12/15/09/concert-984237_960_720.jpg);
     background-size: cover;
