--- a/public/app/templates/Event/event.html
+++ b/public/app/templates/Event/event.html
@@ -29,7 +29,8 @@
                 <p class="event-meta">{{event.date}}</p>
                 <footer>
                     <a href="#/Event/{{event.id}}" class="btn btn-default" role="button">Show</a>
-                    <a class="btn btn-danger" role="button">Delete</a> //@TODO  ng-click: delete this event
+                    <a class="btn btn-danger" role="button">Delete</a>
+                    <!--@TODO  ng-click: delete this event -->
                 </footer>
             </div>
         </div>
