added description and comments

--- a/public/app/templates/Event/event.html
+++ b/public/app/templates/Event/event.html
@@ -1,3 +1,5 @@
+<!-- ng-init only for demonstration because event is undefined-->
+
 <div class="container" ng-init="events = [
     {
         name: 'erster Event',
