- changed pathes and folder names to lowercase - fixed name refactoring bugs - added check for login users otherwise redirect to home

--- a/public/app/templates/Caterer/list.html
+++ b/public/app/templates/Caterer/list.html
@@ -37,6 +37,6 @@
     </div>
 </div>
 <!--<ul>
-    <li ng-repeat = "Cat in Caterer">{{cat.kitchen}}</li>
+    <li ng-repeat = "Cat in caterer">{{cat.kitchen}}</li>
 </ul>-->
 <a href = "#/Caterer/new" class = "btn btn-default">Add new Caterer</a>
