--- a/public/app/templates/event/event-list.html
+++ b/public/app/templates/event/event-list.html
@@ -1,27 +1,6 @@
 <!-- ng-init only for demonstration because event is undefined-->
 
-<div class="container" ng-init="events = [
-    {
-        name: 'erster Event',
-        date: '29.09.2019',
-        id: 992883
-    },
-    {
-        name: '2. Event',
-        date: '29.09.2019',
-        id: 992883
-    },
-    {
-        name: '3. Event',
-        date: '29.09.2019',
-        id: 992883
-    },
-    {
-        name: '4. Event',
-        date: '29.09.2019',
-        id: 992883
-    }
-] ">
+<div class="container" >
     <h2>Your events <a href="#" class="btn btn-success pull-right" role="button">Create new event</a></h2>
     <div class="row-flex">
 
