added testDataService for reading test files before backend routes exist.

--- a/public/app/templates/Offer/offer.html
+++ b/public/app/templates/Offer/offer.html
@@ -1,13 +1,13 @@
 <nav style="float: left; margin: 0 auto;">
     <ul>
         <li>
-            <a href="#/Location">Location</a>
+            <a href="#/location">Location</a>
         </li>
         <li>
-            <a href="#/Invitation">Invitation</a>
+            <a href="#/invitation">Invitation</a>
         </li>
         <li>
-            <a href="#/Caterer">Caterer</a>
+            <a href="#/caterer">Caterer</a>
         </li>
     </ul>
 </nav>
