--- a/public/app/templates/Directives/navigation.html
+++ b/public/app/templates/Directives/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<header class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -9,7 +9,7 @@
             </button>
             <a class="navbar-brand" href="#"><img src="" alt="LOGO"></a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
+        <nav id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right" ng-hide="isLoggedin">
                 <li><a class="btn btn-success navbar-btn" data-toggle="modal" data-target="#login-modal" href="">Login</a></li>
                 <li><a class="btn btn-success navbar-btn" data-toggle="modal" data-target="#register-modal" href="">Register</a></li>
@@ -17,6 +17,6 @@
             <ul class="nav navbar-nav navbar-right" ng-show="isLoggedin">
                 <li><a class="btn btn-danger navbar-btn" href="#/" ng-click="logout()">Logout</a></li>
             </ul>
-        </div><!--/.nav-collapse -->
+        </nav>
     </div>
-</nav>
+</header>
